// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test MiddleWareApp passed default headers 1`] = `
<div>
  <div
    class="sc-jtggT lbSfdq"
  >
    <div
      class="sc-fONwsr jNppkf playground"
    >
      <div
        class="sc-daURTG dROqMf"
      >
        <div
          class="sc-bXGyLb dDuAEY"
        >
          <div
            class="sc-cmthru bfVYLy"
          >
            <div
              class="sc-gqPbQI SEbZC"
            >
              <div
                class="sc-hORach fyhdOf"
              />
            </div>
            <div
              class="sc-hMFtBS gtvAeD"
            >
              New Tab
            </div>
            <div
              class="sc-gojNiO izjFJN close"
            >
              <svg
                height="11"
                stroke-width="7"
                viewBox="0 0 50 50"
                width="12"
              >
                <title>
                  Close Tab
                </title>
                <line
                  x1="4"
                  x2="46"
                  y1="4"
                  y2="46"
                />
                <line
                  x1="46"
                  x2="4"
                  y1="4"
                  y2="46"
                />
              </svg>
            </div>
          </div>
          <div
            class="sc-lkqHmb hrrKPQ"
          >
            <svg
              height="34"
              stroke-width="4"
              viewBox="0 0 50 50"
              width="34"
            >
              <title>
                Opens a New Tab
              </title>
              <line
                x1="25"
                x2="25"
                y1="13.1"
                y2="36.9"
              />
              <line
                x1="36.9"
                x2="13.1"
                y1="25"
                y2="25"
              />
            </svg>
          </div>
        </div>
      </div>
      <div
        class="sc-VJcYb jsBJIl"
      >
        <div
          class="sc-ipXKqB iPMBQr graphiql-wrapper active"
        >
          <div
            class="sc-EHOje cIypmL"
          >
            <div
              class="sc-ifAKCX cEPVvT"
            >
              <div
                class="sc-cvbbAY kOflzg"
              >
                <button
                  class="sc-eHgmQL dvmgwq"
                >
                  Prettify
                </button>
                <button
                  class="sc-eHgmQL dvmgwq"
                >
                  History
                </button>
                <div
                  class="sc-brqgnP kOowTR"
                >
                  <input
                    class="sc-jWBwVP cljqcK"
                    value="https://localhost/"
                  />
                  <div
                    style="display:flex;flex-direction:row;align-items:center;position:absolute;left:6px"
                  >
                    <div
                      class="sc-jKJlTe sc-iAyFgw cVhxIQ"
                      title="Polling Schema"
                    >
                      <div
                        class="sc-hSdWYo vFglF"
                      />
                    </div>
                  </div>
                </div>
                <button
                  class="sc-eHgmQL dvmgwq"
                >
                  Copy CURL
                </button>
              </div>
              <div
                class="sc-ibxdXY biDfcz"
              >
                <div
                  class="sc-cMhqgX dUUizb"
                >
                  <div
                    class="sc-ifAKCX cEPVvT"
                  >
                    <div
                      class="sc-bZQynM imcoIY"
                    />
                  </div>
                  <div
                    class="sc-eTuwsz sc-hXRMBi bihGhC"
                    height="200"
                  >
                    <div
                      class="sc-gwVKww jmsfqV sc-epnACN cATAit"
                    >
                      <span
                        class="sc-iQNlJl bpxsnM"
                      >
                        Query Variables
                      </span>
                      <span
                        class="sc-iQNlJl gArUSm"
                      >
                        HTTP Headers (1)
                      </span>
                    </div>
                    <div
                      class="sc-gPEVay ihtVGC"
                    />
                  </div>
                  <div
                    class="sc-iQKALj sc-bwCtUz hLmxzl"
                  />
                </div>
                <div
                  class="sc-RefOD iqiKGG"
                >
                  <div
                    class="sc-iQKALj sc-hrWEMg fHZBGP"
                  />
                  <div
                    class="sc-bdVaJa bFURGJ"
                  >
                    <div
                      class="sc-bwzfXH kJytub"
                      title="Execute Query (Ctrl-Enter)"
                    >
                      <svg
                        height="35"
                        viewBox="3.5,4.5,24,24"
                        width="35"
                      >
                        <path
                          d="M 11 9 L 24 16 L 11 23 z"
                        />
                      </svg>
                    </div>
                  </div>
                  <div
                    class="sc-csuQGl jqqEqQ"
                  >
                    <div
                      class="sc-Rmtcm izeTTo"
                    >
                      <div
                        class="sc-jhAzac czBwBS"
                      >
                        <div
                          class="sc-gipzik jWCgLV"
                        />
                      </div>
                    </div>
                  </div>
                  <div
                    class="sc-iuJeZd PkTkM"
                  >
                    Press the Play Button to get a response here
                  </div>
                  <div
                    class="sc-eTuwsz sc-bsbRJL jvVfGJ"
                    height="300"
                  >
                    <div
                      class="sc-gwVKww jmsfqV sc-hZSUBg hQHJtw"
                    >
                      <span
                        class="sc-iQNlJl bpxsnM"
                      >
                        Tracing
                      </span>
                    </div>
                    <div
                      class="sc-caSCKo jXBojK"
                    >
                      <div
                        class="sc-kjoXOD bJwwoz"
                      >
                        This GraphQL server doesn’t support tracing. See the following page for instructions:
                        <br />
                        https://github.com/apollographql/apollo-tracing
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="sc-kgAjT hyCFBj"
              style="width:0"
            >
              <div
                class="sc-hmzhuo ckIQDP"
              >
                <div
                  class="sc-TOsTZ iRmVrA"
                >
                  Docs
                </div>
                <div
                  class="sc-TOsTZ FJeHV"
                >
                  Schema
                </div>
              </div>
              <div
                class="sc-ksYbfQ jvrrBm"
              />
              <div
                class="sc-frDJqD esEVLt"
              />
              <div
                class="sc-cJSrbW hLWfWH"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="sc-dTdPqK emFIyf"
      >
        <div
          class="sc-itybZL hAFQvt"
        >
          <svg
            height="23"
            viewBox="0 0 50 50"
            width="23"
          >
            <title>
              Settings
            </title>
            <path
              d="M48,21h-5.71c-0.4-1.58-0.91-3.33-1.56-4.66l4.06-4.06c0.19-0.19,0.29-0.44,0.29-0.71
		c0-0.27-0.11-0.52-0.29-0.71L39.14,5.2c-0.39-0.39-1.02-0.39-1.41,0l-4.06,4.06C32.33,8.62,30.58,8.11,29,7.71V2c0-0.55-0.45-1-1-1
		h-6c-0.55,0-1,0.45-1,1v5.71c-1.58,0.4-3.33,0.91-4.66,1.55L12.27,5.2c-0.39-0.39-1.02-0.39-1.41,0L5.2,10.86
		c-0.39,0.39-0.39,1.02,0,1.41l4.07,4.07C8.62,17.66,8.11,19.42,7.71,21H2c-0.55,0-1,0.45-1,1v6c0,0.55,0.45,1,1,1h5.71
		c0.4,1.58,0.91,3.34,1.56,4.66L5.2,37.73c-0.19,0.19-0.29,0.44-0.29,0.71s0.11,0.52,0.29,0.71l5.66,5.66c0.38,0.38,1.04,0.38,1.41,0
		l4.07-4.06c1.32,0.65,3.08,1.15,4.66,1.56V48c0,0.55,0.45,1,1,1h6c0.55,0,1-0.45,1-1v-5.71c1.58-0.4,3.34-0.91,4.66-1.56l4.07,4.06
		c0.39,0.39,1.02,0.39,1.41,0l5.66-5.66c0.39-0.39,0.39-1.02,0-1.41l-4.06-4.07c0.65-1.33,1.16-3.08,1.56-4.66H48c0.55,0,1-0.45,1-1
		v-6C49,21.45,48.55,21,48,21 M25,33c-4.41,0-8-3.59-8-8s3.59-8,8-8s8,3.59,8,8S29.41,33,25,33"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`test MiddleWareApp with tabs 1`] = `
<div>
  <div
    class="sc-jtggT lbSfdq"
  >
    <div
      class="sc-fONwsr jNppkf playground"
    >
      <div
        class="sc-daURTG dROqMf"
      >
        <div
          class="sc-bXGyLb dDuAEY"
        >
          <div
            class="sc-cmthru bfVYLy"
          >
            <div
              class="sc-gqPbQI SEbZC"
            >
              <div
                class="sc-hORach fyhdOf"
              />
            </div>
            <div
              class="sc-hMFtBS gtvAeD"
            >
              New Tab
            </div>
            <div
              class="sc-gojNiO izjFJN close"
            >
              <svg
                height="11"
                stroke-width="7"
                viewBox="0 0 50 50"
                width="12"
              >
                <title>
                  Close Tab
                </title>
                <line
                  x1="4"
                  x2="46"
                  y1="4"
                  y2="46"
                />
                <line
                  x1="46"
                  x2="4"
                  y1="4"
                  y2="46"
                />
              </svg>
            </div>
          </div>
          <div
            class="sc-lkqHmb hrrKPQ"
          >
            <svg
              height="34"
              stroke-width="4"
              viewBox="0 0 50 50"
              width="34"
            >
              <title>
                Opens a New Tab
              </title>
              <line
                x1="25"
                x2="25"
                y1="13.1"
                y2="36.9"
              />
              <line
                x1="36.9"
                x2="13.1"
                y1="25"
                y2="25"
              />
            </svg>
          </div>
        </div>
      </div>
      <div
        class="sc-VJcYb jsBJIl"
      >
        <div
          class="sc-ipXKqB iPMBQr graphiql-wrapper active"
        >
          <div
            class="sc-EHOje cIypmL"
          >
            <div
              class="sc-ifAKCX cEPVvT"
            >
              <div
                class="sc-cvbbAY kOflzg"
              >
                <button
                  class="sc-eHgmQL dvmgwq"
                >
                  Prettify
                </button>
                <button
                  class="sc-eHgmQL dvmgwq"
                >
                  History
                </button>
                <div
                  class="sc-brqgnP kOowTR"
                >
                  <input
                    class="sc-jWBwVP cljqcK"
                    value="https://localhost/"
                  />
                  <div
                    style="display:flex;flex-direction:row;align-items:center;position:absolute;left:6px"
                  >
                    <div
                      class="sc-jKJlTe sc-iAyFgw cVhxIQ"
                      title="Polling Schema"
                    >
                      <div
                        class="sc-hSdWYo vFglF"
                      />
                    </div>
                  </div>
                </div>
                <button
                  class="sc-eHgmQL dvmgwq"
                >
                  Copy CURL
                </button>
              </div>
              <div
                class="sc-ibxdXY biDfcz"
              >
                <div
                  class="sc-cMhqgX dUUizb"
                >
                  <div
                    class="sc-ifAKCX cEPVvT"
                  >
                    <div
                      class="sc-bZQynM imcoIY"
                    />
                  </div>
                  <div
                    class="sc-eTuwsz sc-hXRMBi bihGhC"
                    height="200"
                  >
                    <div
                      class="sc-gwVKww jmsfqV sc-epnACN cATAit"
                    >
                      <span
                        class="sc-iQNlJl bpxsnM"
                      >
                        Query Variables
                      </span>
                      <span
                        class="sc-iQNlJl gArUSm"
                      >
                        HTTP Headers 
                      </span>
                    </div>
                    <div
                      class="sc-gPEVay ihtVGC"
                    />
                  </div>
                  <div
                    class="sc-iQKALj sc-bwCtUz hLmxzl"
                  />
                </div>
                <div
                  class="sc-RefOD iqiKGG"
                >
                  <div
                    class="sc-iQKALj sc-hrWEMg fHZBGP"
                  />
                  <div
                    class="sc-bdVaJa bFURGJ"
                  >
                    <div
                      class="sc-bwzfXH kJytub"
                      title="Execute Query (Ctrl-Enter)"
                    >
                      <svg
                        height="35"
                        viewBox="3.5,4.5,24,24"
                        width="35"
                      >
                        <path
                          d="M 11 9 L 24 16 L 11 23 z"
                        />
                      </svg>
                    </div>
                  </div>
                  <div
                    class="sc-csuQGl jqqEqQ"
                  >
                    <div
                      class="sc-Rmtcm izeTTo"
                    >
                      <div
                        class="sc-jhAzac czBwBS"
                      >
                        <div
                          class="sc-gipzik jWCgLV"
                        />
                      </div>
                    </div>
                  </div>
                  <div
                    class="sc-iuJeZd PkTkM"
                  >
                    Press the Play Button to get a response here
                  </div>
                  <div
                    class="sc-eTuwsz sc-bsbRJL jvVfGJ"
                    height="300"
                  >
                    <div
                      class="sc-gwVKww jmsfqV sc-hZSUBg hQHJtw"
                    >
                      <span
                        class="sc-iQNlJl bpxsnM"
                      >
                        Tracing
                      </span>
                    </div>
                    <div
                      class="sc-caSCKo jXBojK"
                    >
                      <div
                        class="sc-kjoXOD bJwwoz"
                      >
                        This GraphQL server doesn’t support tracing. See the following page for instructions:
                        <br />
                        https://github.com/apollographql/apollo-tracing
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="sc-kgAjT hyCFBj"
              style="width:0"
            >
              <div
                class="sc-hmzhuo ckIQDP"
              >
                <div
                  class="sc-TOsTZ iRmVrA"
                >
                  Docs
                </div>
                <div
                  class="sc-TOsTZ FJeHV"
                >
                  Schema
                </div>
              </div>
              <div
                class="sc-ksYbfQ jvrrBm"
              />
              <div
                class="sc-frDJqD esEVLt"
              />
              <div
                class="sc-cJSrbW hLWfWH"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="sc-dTdPqK emFIyf"
      >
        <div
          class="sc-itybZL hAFQvt"
        >
          <svg
            height="23"
            viewBox="0 0 50 50"
            width="23"
          >
            <title>
              Settings
            </title>
            <path
              d="M48,21h-5.71c-0.4-1.58-0.91-3.33-1.56-4.66l4.06-4.06c0.19-0.19,0.29-0.44,0.29-0.71
		c0-0.27-0.11-0.52-0.29-0.71L39.14,5.2c-0.39-0.39-1.02-0.39-1.41,0l-4.06,4.06C32.33,8.62,30.58,8.11,29,7.71V2c0-0.55-0.45-1-1-1
		h-6c-0.55,0-1,0.45-1,1v5.71c-1.58,0.4-3.33,0.91-4.66,1.55L12.27,5.2c-0.39-0.39-1.02-0.39-1.41,0L5.2,10.86
		c-0.39,0.39-0.39,1.02,0,1.41l4.07,4.07C8.62,17.66,8.11,19.42,7.71,21H2c-0.55,0-1,0.45-1,1v6c0,0.55,0.45,1,1,1h5.71
		c0.4,1.58,0.91,3.34,1.56,4.66L5.2,37.73c-0.19,0.19-0.29,0.44-0.29,0.71s0.11,0.52,0.29,0.71l5.66,5.66c0.38,0.38,1.04,0.38,1.41,0
		l4.07-4.06c1.32,0.65,3.08,1.15,4.66,1.56V48c0,0.55,0.45,1,1,1h6c0.55,0,1-0.45,1-1v-5.71c1.58-0.4,3.34-0.91,4.66-1.56l4.07,4.06
		c0.39,0.39,1.02,0.39,1.41,0l5.66-5.66c0.39-0.39,0.39-1.02,0-1.41l-4.06-4.07c0.65-1.33,1.16-3.08,1.56-4.66H48c0.55,0,1-0.45,1-1
		v-6C49,21.45,48.55,21,48,21 M25,33c-4.41,0-8-3.59-8-8s3.59-8,8-8s8,3.59,8,8S29.41,33,25,33"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`test MiddleWareApp without tabs 1`] = `
<div>
  <div
    class="sc-jtggT lbSfdq"
  >
    <div
      class="sc-fONwsr jNppkf playground"
    >
      <div
        class="sc-daURTG dROqMf"
      >
        <div
          class="sc-bXGyLb dDuAEY"
        >
          <div
            class="sc-cmthru bfVYLy"
          >
            <div
              class="sc-gqPbQI SEbZC"
            >
              <div
                class="sc-hORach fyhdOf"
              />
            </div>
            <div
              class="sc-hMFtBS gtvAeD"
            >
              New Tab
            </div>
            <div
              class="sc-gojNiO izjFJN close"
            >
              <svg
                height="11"
                stroke-width="7"
                viewBox="0 0 50 50"
                width="12"
              >
                <title>
                  Close Tab
                </title>
                <line
                  x1="4"
                  x2="46"
                  y1="4"
                  y2="46"
                />
                <line
                  x1="46"
                  x2="4"
                  y1="4"
                  y2="46"
                />
              </svg>
            </div>
          </div>
          <div
            class="sc-lkqHmb hrrKPQ"
          >
            <svg
              height="34"
              stroke-width="4"
              viewBox="0 0 50 50"
              width="34"
            >
              <title>
                Opens a New Tab
              </title>
              <line
                x1="25"
                x2="25"
                y1="13.1"
                y2="36.9"
              />
              <line
                x1="36.9"
                x2="13.1"
                y1="25"
                y2="25"
              />
            </svg>
          </div>
        </div>
      </div>
      <div
        class="sc-VJcYb jsBJIl"
      >
        <div
          class="sc-ipXKqB iPMBQr graphiql-wrapper active"
        >
          <div
            class="sc-EHOje cIypmL"
          >
            <div
              class="sc-ifAKCX cEPVvT"
            >
              <div
                class="sc-cvbbAY kOflzg"
              >
                <button
                  class="sc-eHgmQL dvmgwq"
                >
                  Prettify
                </button>
                <button
                  class="sc-eHgmQL dvmgwq"
                >
                  History
                </button>
                <div
                  class="sc-brqgnP kOowTR"
                >
                  <input
                    class="sc-jWBwVP cljqcK"
                    value="https://localhost/"
                  />
                  <div
                    style="display:flex;flex-direction:row;align-items:center;position:absolute;left:6px"
                  >
                    <div
                      class="sc-jKJlTe sc-iAyFgw cVhxIQ"
                      title="Polling Schema"
                    >
                      <div
                        class="sc-hSdWYo vFglF"
                      />
                    </div>
                  </div>
                </div>
                <button
                  class="sc-eHgmQL dvmgwq"
                >
                  Copy CURL
                </button>
              </div>
              <div
                class="sc-ibxdXY biDfcz"
              >
                <div
                  class="sc-cMhqgX dUUizb"
                >
                  <div
                    class="sc-ifAKCX cEPVvT"
                  >
                    <div
                      class="sc-bZQynM imcoIY"
                    />
                  </div>
                  <div
                    class="sc-eTuwsz sc-hXRMBi bihGhC"
                    height="200"
                  >
                    <div
                      class="sc-gwVKww jmsfqV sc-epnACN cATAit"
                    >
                      <span
                        class="sc-iQNlJl bpxsnM"
                      >
                        Query Variables
                      </span>
                      <span
                        class="sc-iQNlJl gArUSm"
                      >
                        HTTP Headers 
                      </span>
                    </div>
                    <div
                      class="sc-gPEVay ihtVGC"
                    />
                  </div>
                  <div
                    class="sc-iQKALj sc-bwCtUz hLmxzl"
                  />
                </div>
                <div
                  class="sc-RefOD iqiKGG"
                >
                  <div
                    class="sc-iQKALj sc-hrWEMg fHZBGP"
                  />
                  <div
                    class="sc-bdVaJa bFURGJ"
                  >
                    <div
                      class="sc-bwzfXH kJytub"
                      title="Execute Query (Ctrl-Enter)"
                    >
                      <svg
                        height="35"
                        viewBox="3.5,4.5,24,24"
                        width="35"
                      >
                        <path
                          d="M 11 9 L 24 16 L 11 23 z"
                        />
                      </svg>
                    </div>
                  </div>
                  <div
                    class="sc-csuQGl jqqEqQ"
                  >
                    <div
                      class="sc-Rmtcm izeTTo"
                    >
                      <div
                        class="sc-jhAzac czBwBS"
                      >
                        <div
                          class="sc-gipzik jWCgLV"
                        />
                      </div>
                    </div>
                  </div>
                  <div
                    class="sc-iuJeZd PkTkM"
                  >
                    Press the Play Button to get a response here
                  </div>
                  <div
                    class="sc-eTuwsz sc-bsbRJL jvVfGJ"
                    height="300"
                  >
                    <div
                      class="sc-gwVKww jmsfqV sc-hZSUBg hQHJtw"
                    >
                      <span
                        class="sc-iQNlJl bpxsnM"
                      >
                        Tracing
                      </span>
                    </div>
                    <div
                      class="sc-caSCKo jXBojK"
                    >
                      <div
                        class="sc-kjoXOD bJwwoz"
                      >
                        This GraphQL server doesn’t support tracing. See the following page for instructions:
                        <br />
                        https://github.com/apollographql/apollo-tracing
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="sc-kgAjT hyCFBj"
              style="width:0"
            >
              <div
                class="sc-hmzhuo ckIQDP"
              >
                <div
                  class="sc-TOsTZ iRmVrA"
                >
                  Docs
                </div>
                <div
                  class="sc-TOsTZ FJeHV"
                >
                  Schema
                </div>
              </div>
              <div
                class="sc-ksYbfQ jvrrBm"
              />
              <div
                class="sc-frDJqD esEVLt"
              />
              <div
                class="sc-cJSrbW hLWfWH"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="sc-dTdPqK emFIyf"
      >
        <div
          class="sc-itybZL hAFQvt"
        >
          <svg
            height="23"
            viewBox="0 0 50 50"
            width="23"
          >
            <title>
              Settings
            </title>
            <path
              d="M48,21h-5.71c-0.4-1.58-0.91-3.33-1.56-4.66l4.06-4.06c0.19-0.19,0.29-0.44,0.29-0.71
		c0-0.27-0.11-0.52-0.29-0.71L39.14,5.2c-0.39-0.39-1.02-0.39-1.41,0l-4.06,4.06C32.33,8.62,30.58,8.11,29,7.71V2c0-0.55-0.45-1-1-1
		h-6c-0.55,0-1,0.45-1,1v5.71c-1.58,0.4-3.33,0.91-4.66,1.55L12.27,5.2c-0.39-0.39-1.02-0.39-1.41,0L5.2,10.86
		c-0.39,0.39-0.39,1.02,0,1.41l4.07,4.07C8.62,17.66,8.11,19.42,7.71,21H2c-0.55,0-1,0.45-1,1v6c0,0.55,0.45,1,1,1h5.71
		c0.4,1.58,0.91,3.34,1.56,4.66L5.2,37.73c-0.19,0.19-0.29,0.44-0.29,0.71s0.11,0.52,0.29,0.71l5.66,5.66c0.38,0.38,1.04,0.38,1.41,0
		l4.07-4.06c1.32,0.65,3.08,1.15,4.66,1.56V48c0,0.55,0.45,1,1,1h6c0.55,0,1-0.45,1-1v-5.71c1.58-0.4,3.34-0.91,4.66-1.56l4.07,4.06
		c0.39,0.39,1.02,0.39,1.41,0l5.66-5.66c0.39-0.39,0.39-1.02,0-1.41l-4.06-4.07c0.65-1.33,1.16-3.08,1.56-4.66H48c0.55,0,1-0.45,1-1
		v-6C49,21.45,48.55,21,48,21 M25,33c-4.41,0-8-3.59-8-8s3.59-8,8-8s8,3.59,8,8S29.41,33,25,33"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
</div>
`;
